# doraex

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
data/: posterior_predictive_vsini=0.npz
examples/luhman16b_yama/: README.md  chip_paths.py  compare_milestone5_single_line_rt_predictions.py  diagnose_milestone2_5a_f_cloud_grid.py  evaluate_milestone4_pressure_linearization.py  generate_milestone2_cloud_grid_profiles.py  generate_milestone2_fixed_profiles.py  generate_milestone2_t0_alpha_cloud_zeta_grid_profiles.py  generate_milestone2_t0_cloud_grid_profiles.py  m6_v1_run.py  m7_v1_run.py  make_milestone1_products.py  make_milestone2_fixed_products.py  make_milestone2_free_cloud_products.py  make_milestone2_free_t0_cloud_products.py  make_milestone2_joint_chip_products.py  make_milestone4_on_the_fly_products.py  make_milestone5_minimum_window_figures.py  run_luhman16b_yama.py  run_milestone1_nuts.py  run_milestone2_fixed_atmosphere.py  run_milestone2_fixed_ell_sensitivity.py  run_milestone2_free_cloud.py  run_milestone2_free_t0_cloud.py  run_milestone2_joint_chips.py  run_milestone3_delta_sensitivity.py  run_milestone4_pressure_variation.py  run_milestone5_on_the_fly_atmosphere.py  summarize_milestone2_chip_comparison.py  summarize_milestone2_ell_sensitivity.py
examples/synthetic_two_column/: README.md
results/: README.md
src/doraex/: Doraex_version.py  __init__.py  constants.py
src/doraex/data/: __init__.py  luhman16b.py
src/doraex/diagnostics/: __init__.py  mean_subtracted_line_stack.py  mean_subtracted_plotting.py  single_line_pressure_response.py
src/doraex/geometry/: __init__.py  healpix.py  limb_darkening.py  rotation.py
src/doraex/inference/: __init__.py  diagnostics.py  map_posterior.py  marginal_likelihood.py  numpyro_models.py
src/doraex/operators/: __init__.py  design_matrix.py  doppler.py  tensor.py
src/doraex/priors/: __init__.py  atmospheric.py  noise.py  spherical_gp.py
src/doraex/products/: __init__.py  primary.py
src/doraex/spectra/: __init__.py  columns.py  exojax_forward.py  instrument.py  normalization.py
src/doraex/workflows/: __init__.py  luhman16b_milestone1.py  luhman16b_milestone2.py  posterior_predictive.py  run_doppler_retrieval.py  run_synthetic_two_column.py
tests/: conftest.py
tests/unittests/: test_luhman16b_milestone1.py  test_luhman16b_milestone2.py  test_ureshino_reproduction.py
