# pyproject.toml for Doraex
# - Uses PEP 621 metadata (project table)
# - Builds with setuptools + setuptools-scm (version from VCS tags)
# - Packages are under src/ (package_dir={"": "src"})

[build-system]
# setuptools-scm is listed here because version is dynamic (from SCM).
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "doraex"
# Version is provided by setuptools-scm from your Git tags (e.g., v2.2.0).
# Remove any hard-coded version numbers in setup.py. Keep dynamic below.
dynamic = ["version"]

authors = [{ name = "Hajime Kawahara and Doraex developers", email = "divrot@gmail.com" }]
maintainers = [{ name = "Hajime Kawahara", email = "divrot@gmail.com" }]

description = "Bayesian Doppler retrieval of atmospheres using ExoJAX."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"

# Classifiers ported from setup.py. Add more if applicable.
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]

dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "numpyro",
  "scipy",
  "exojax",
]

[project.optional-dependencies]
maps = [
  "healpy",
  "healjax @ git+https://github.com/ghcollin/healjax.git",
]
examples = [
  "pandas",
  "matplotlib",
  "tqdm",
]
dev = [
  "pytest",
]

[project.urls]
# Fill these as appropriate for your project.
"Homepage" = "https://secondearths.sakura.ne.jp/doraex/"
"Repository" = "https://github.com/HajimeKawahara/doraex"
"Documentation" = "https://secondearths.sakura.ne.jp/doraex/"
"Bug Tracker" = "https://github.com/HajimeKawahara/doraex/issues"

[tool.setuptools]
# This mirrors package_dir={"": "src"} from setup.py.
package-dir = { "" = "src" }
# Honor MANIFEST.in and package data inside packages.
include-package-data = true

[tool.setuptools.packages.find]
# Equivalent to find_packages(where="src")
where = ["src"]

[tool.setuptools_scm]
write_to = "src/doraex/Doraex_version.py"
# Optional templates and schemes can be customized if you need exact formatting:
# write_to_template = "__version__ = \"{version}\"\n"
# version_scheme = "guess-next-dev"
# local_scheme = "node-and-date"
